--- a/Week03/elia.css
+++ b/Week03/elia.css
@@ -1,20 +1,27 @@
 body {
-  background-color: pink;
+  background-color: rgb(157, 157, 190);
 }
 h1 {
   text-align: center;
-  background-color: aliceblue;
+  background-color: black;
+  font-size: 70px;
+  color: white;
 }
 h4 {
   text-align: center;
-  
+  font-size: 40px;
+  background-color: black;
+  color: white;
+
 }
 hr {
-  color: pink;
+  color:black;
   display: block;
-  height: 6px;
   margin: 1px;
   padding: 1x;
-  border: 10px solid pink;
+  border: 3px solid black;
   border-radius: 5px;
+}
+li {
+  font-size: 30px;
 }
